# NepseClient

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CNAME  DEPLOYMENT.md  DISCLAIMER.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  changelog.html  check_publish_setup.sh  contributing.html  disclaimer.html  fix_linting.sh  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  tests.yml
_downloads/f1ff873df30da0e77ad368bd12117ea6/: basic_usage.py
_modules/: index.html
_modules/nepse_client/: async_client.html  client.html  dummy_id_manager.html  exceptions.html  sync_client.html  token_manager.html
_sources/: changelog.rst.txt  contributing.rst.txt  disclaimer.rst.txt  index.rst.txt  installation.rst.txt
_sources/api/: errors.rst.txt  nepse_client.rst.txt
_sources/examples/: basic_usage.rst.txt
api/: client.html  errors.html  modules.html  nepse_client.html  utils.html
docs/: Makefile  conf.py  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt
docs/api/: client.rst  errors.rst  modules.rst  utils.rst
docs/examples/: advanced_examples.rst  async_usage.rst  index.rst
examples/: advance_usage.py  advanced_examples.html  async_usage.html  basic_usage.html  basic_usage.py  django_integration.py  error_handling.py  index.html
nepse_client/: __init__.py  api.py  async_client.py  client.py  dummy_id_manager.py  exceptions.py  sync_client.py  token_manager.py
tests/: __init__.py  conftest.py  test_async_client.py  test_basic.py  test_dummy_id_manager.py  test_errors.py  test_integration.py  test_sync_client.py  test_token_manager.py
