[project]
name = "nepse-client"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pywasm>=2.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "twine>=6.2.0",
    "pre-commit>=4.3.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
