[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse-client"
version = "0.1.1"
description = "A comprehensive Python client for Nepal Stock Exchange (NEPSE) API"
readme = "README.md"
authors = [
    {name = "Amrit Giri", email = "amritgiri.dev@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pywasm>=1.0.8",
    "tqdm>=4.65.0",
]
keywords = ["NEPSE", "nepal", "stock", "exchange", "finance", "trading", "api", "client"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",

    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

django = ["django>=3.2"]

[project.urls]
Homepage = "https://github.com/4mritgiri/NepseClient"
"Bug Reports" = "https://github.com/4mritgiri/NepseClient/issues"
Source = "https://github.com/4mritgiri/NepseClient"
Documentation = "https://NepseClient.readthedocs.io"

[tool.setuptools]
packages = ["nepse_client"]

[tool.setuptools.package-data]
nepse_client = [
    "data/*.json",
    "data/*.wasm",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
